<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">



    <TextView
        android:id="@+id/textViewX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/UserName"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.247" />

    <EditText
        android:id="@+id/editText2X"
        android:layout_width="167dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/UserName"
        android:inputType="textPersonName"
        android:textSize="20dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewX"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewX" />


    <TextView
        android:id="@+id/textView2X"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/BirthDay"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewX"
        app:layout_constraintVertical_bias="0.02" />

    <EditText
        android:id="@+id/editText3X"
        android:layout_width="167dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/BirthDay"
        android:inputType="textPersonName"
        android:textSize="20dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2X"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewX" />

    <TextView
        android:id="@+id/textView3X"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Password"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2X"
        app:layout_constraintVertical_bias="0.055" />

    <EditText
        android:id="@+id/editText4X"
        android:layout_width="168dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3X"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3X" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toEndOf="@+id/textView4X"
        app:layout_constraintTop_toBottomOf="@+id/editText4X"
        app:layout_constraintVertical_bias="0.141">

        <RadioButton
            android:id="@+id/radioButton2X"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/Male"
            android:onClick="checkButton"
            android:checked="true"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView4X"
            app:layout_constraintEnd_toStartOf="@+id/radioButton3X"
            app:layout_constraintStart_toEndOf="@+id/textView4X" />

        <RadioButton
            android:id="@+id/radioButton3X"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="68dp"
            android:onClick="checkButton"
            android:text="@string/Female"
            app:layout_constraintBaseline_toBaselineOf="@+id/radioButton2X"
            app:layout_constraintEnd_toEndOf="parent" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView4X"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/Gendern"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3X"
        app:layout_constraintVertical_bias="0.291" />

    <Button
        android:id="@+id/button3X"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4X"
        app:layout_constraintVertical_bias="0.328" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Delete"
        app:layout_constraintBaseline_toBaselineOf="@+id/button3X"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3X" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Search"
        app:layout_constraintBottom_toTopOf="@+id/editText2X"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.819" />


</androidx.constraintlayout.widget.ConstraintLayout>